--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script>
+			alert('1234564');
 			function browserRedirect() {
 			    var sUserAgent = navigator.userAgent.toLowerCase();
 			    var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";
