--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				window.location.href="http://localhost:8080/Demo/index/";
 			    }
 			}
-			browserRedirect();
+			//browserRedirect();
 		</script>
 	
 	</head>
-	
+		aaaa
 	<body>	
 	</body>
 
