--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<script>
-			alert('1234564');
 			function browserRedirect() {
 			    var sUserAgent = navigator.userAgent.toLowerCase();
 			    var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";
@@ -18,11 +17,10 @@
 				window.location.href="http://localhost:8080/Demo/index/";
 			    }
 			}
-			//browserRedirect();
+			browserRedirect();
 		</script>
 	
 	</head>
-		aaaa
 	<body>	
 	</body>
 
