--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			    var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
 			    var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
 			    if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){
-				window.location.href="http://localhost:8080/Demo/index/";
+				window.location.href="http://192.168.1.121:8080/Demo/index/";
 			    } else {
-				window.location.href="http://localhost:8080/Demo/index/";
+				window.location.href="http://192.168.1.121:8080/Demo/index/";
 			    }
 			}
 			browserRedirect();
